welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: not found: value %
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
     ^lastDigit:2: error: not found: value ==%
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
       ^lastDigit:2: error: not found: value &&
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
            ^lastDigit:2: error: not found: value %
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
                         ^lastDigit:2: error: not found: value ==%
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
                           ^lastDigit:2: error: not found: value &&
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
                                ^lastDigit:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
  ^