welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
  if(%a==%b && %a==%c || %a==%b && %b==%c) {
    return true
  }
}